# ResPP

./: .gitignore  CMakeLists.txt  configuration.go  cppGeneration.go  errors.go  main.cpp  main.go
cmd/ResPP-cli/: main.go
cmd/ResPP-gui/: routes.go  server.go
cmd/ResPP-gui/spa/: webpack.config.js
pkg/codegen/: cppGeneration.go
pkg/configuration/: configuration.go
pkg/errors/: errors.go
